--- a/sd-s4apps01/mta.yaml
+++ b/sd-s4apps01/mta.yaml
@@ -71,6 +71,10 @@ modules:
       - sdcreditmantablen.zip
       name: sdcreditmantablen
       target-path: resources/
+    - artifacts:
+      - sdzsalesdocumentlist.zip
+      name: sdzsalesdocumentlist
+      target-path: resources/
 - name: sdsalesacceptance
   type: html5
   path: salesacceptance
@@ -132,7 +136,15 @@ modules:
     build-result: dist
     builder: custom
     commands:
-    - npm install
+    - npm run build:cf
+    supported-platforms: []
+- name: sdzsalesdocumentlist
+  type: html5
+  path: zsalesdocumentlist
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
     - npm run build:cf
     supported-platforms: []
 resources:
