MM mta.yaml 缺少配置

--- a/mm-s4apps01/mta.yaml
+++ b/mm-s4apps01/mta.yaml
@@ -62,6 +62,7 @@ modules:
     - artifacts:
       - mmpoacceptance.zip
       name: mmpoacceptance
+      target-path: resources/
     - artifacts:
       - mmpodataanalysis.zip
       name: mmpodataanalysis
