--- a/pp-s4apps01/zmaterialrequisition/webapp/manifest.json
+++ b/pp-s4apps01/zmaterialrequisition/webapp/manifest.json
@@ -126,7 +126,11 @@
       }
     },
     "resources": {
-      "css": []
+      "css": [
+        {
+          "uri": "./ext/css/Style.css"
+        }
+      ]
     },
     "routing": {
       "config": {},
