--- a/fico-s4apps01/zdaystocktrans/webapp/manifest.json
+++ b/fico-s4apps01/zdaystocktrans/webapp/manifest.json
@@ -134,9 +134,13 @@
                 },
                 "@com.sap.vocabularies.UI.v1.SelectionFields": {
                   "filterFields": {
-                    "ExcuDate": { 
+                    "ExcuDate": {
                       "settings": {
-                        "defaultValues": [{"operator": "TODAY"}] 
+                        "defaultValues": [
+                          {
+                            "operator": "TODAY"
+                          }
+                        ]
                       }
                     }
                   }
