--- a/bi-s4apps01/recoverymanagement/webapp/manifest.json
+++ b/bi-s4apps01/recoverymanagement/webapp/manifest.json
@@ -88,7 +88,9 @@
       "": {
         "dataSource": "mainService",
         "preload": true,
-        "settings": {}
+        "settings": {
+          "defaultBindingMode": "TwoWay"
+        }
       }
     },
     "resources": {
