--- a/fico-s4apps01/zbindglupload/ui5-local.yaml
+++ b/fico-s4apps01/zbindglupload/ui5-local.yaml
@@ -2,16 +2,16 @@
 
 specVersion: "3.1"
 metadata:
-  name: fico.zbdglaccountlist
+  name: fico.zbindglupload
 type: application
 framework:
   name: SAPUI5
-  version: 1.124.5
+  version: 1.124.8
   libraries:
     - name: sap.m
     - name: sap.ui.core
-    - name: sap.ushell
     - name: sap.fe.templates
+    - name: sap.ushell
     - name: themelib_sap_horizon
 server:
   customMiddleware:
@@ -21,6 +21,11 @@ server:
         port: 35729
         path: webapp
         delay: 300
+    - name: fiori-tools-preview
+      afterMiddleware: fiori-tools-appreload
+      configuration:
+        component: fico.zbindglupload
+        ui5Theme: sap_horizon
     - name: fiori-tools-proxy
       afterMiddleware: compression
       configuration:
@@ -35,13 +40,8 @@ server:
       configuration:
         mountPath: /
         services:
-          - urlPath: /sap/opu/odata4/sap/zui_bdglaccount/srvd/sap/zui_bdglaccount_o4/0001
+          - urlPath: /sap/opu/odata4/sap/zui_bindglupload_o4/srvd/sap/zui_bindglupload_o4/0001
             metadataPath: ./webapp/localService/metadata.xml
             mockdataPath: ./webapp/localService/data
             generateMockData: true
         annotations: []
-    - name: fiori-tools-preview
-      afterMiddleware: fiori-tools-appreload
-      configuration:
-        component: fico.zbdglaccountlist
-        ui5Theme: sap_horizon
