BI003 回収進捗管理分析

--- a/bi-s4apps01/recoverymanagement/webapp/manifest.json
+++ b/bi-s4apps01/recoverymanagement/webapp/manifest.json
@@ -68,7 +68,7 @@
   "sap.ui5": {
     "flexEnabled": true,
     "dependencies": {
-      "minUI5Version": "1.124.8",
+      "minUI5Version": "1.120.18",
       "libs": {
         "sap.m": {},
         "sap.ui.core": {}
@@ -139,5 +139,8 @@
   "sap.cloud": {
     "public": true,
     "service": "bi-s4apps01"
+  },
+  "sap.platform.cf": {
+      "ui5VersionNumber": "1.120.18"
   }
 }
