PP-013 OF分割ルールマスタ管理 单测对应

--- a/pp-s4apps01/zofsplitrule/webapp/manifest.json
+++ b/pp-s4apps01/zofsplitrule/webapp/manifest.json
@@ -180,7 +180,7 @@
               "controlConfiguration": {
                 "@com.sap.vocabularies.UI.v1.LineItem": {
                   "tableSettings": {
-                    "type": "ResponsiveTable"
+                    "type": "GridTable"
                   },
                   "actions": {
                     "upload": {
