--- a/fico-s4apps01/zpaymentmethod/ui5-local.yaml
+++ b/fico-s4apps01/zpaymentmethod/ui5-local.yaml
@@ -6,7 +6,7 @@ metadata:
 type: application
 framework:
   name: SAPUI5
-  version: 1.124.6
+  version: 1.129.2
   libraries:
     - name: sap.m
     - name: sap.ui.core
@@ -17,6 +17,7 @@ framework:
     - name: sap.ui.table
     - name: sap.ushell
     - name: themelib_sap_horizon
+    - name: sap.ui.unified
 server:
   customMiddleware:
     - name: fiori-tools-appreload
