--- a/fico-s4apps01/fixedassetprint/webapp/manifest.json
+++ b/fico-s4apps01/fixedassetprint/webapp/manifest.json
@@ -43,6 +43,19 @@
           "odataVersion": "4.0"
         }
       }
+    },
+    "crossNavigation": {
+      "inbounds": {
+        "fixedassetprint-display": {
+          "semanticObject": "fixedassetprint",
+          "action": "display",
+          "title": "{{flpTitle}}",
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          }
+        }
+      }
     }
   },
   "sap.ui": {
