--- a/fico-s4apps01/zbindglupload/webapp/manifest.json
+++ b/fico-s4apps01/zbindglupload/webapp/manifest.json
@@ -64,6 +64,15 @@
             "parameters": {},
             "additionalParameters": "allowed"
           }
+        },
+        "zbindglupload-display": {
+          "semanticObject": "zbindglupload",
+          "action": "display",
+          "title": "{{flpTitle}}",
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          }
         }
       }
     }
