ysy 20241107 add flp

--- a/fico-s4apps01/zbdglaccountlist/webapp/manifest.json
+++ b/fico-s4apps01/zbdglaccountlist/webapp/manifest.json
@@ -34,6 +34,19 @@
           "localUri": "annotations/annotation.xml"
         }
       }
+    },
+    "crossNavigation": {
+      "inbounds": {
+        "zbdglaccountlist-display": {
+          "semanticObject": "zbdglaccountlist",
+          "action": "display",
+          "title": "{{flpTitle}}",
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          }
+        }
+      }
     }
   },
   "sap.ui": {
@@ -124,7 +137,7 @@
               "controlConfiguration": {
                 "@com.sap.vocabularies.UI.v1.LineItem": {
                   "tableSettings": {
-                    "type": "GridTable"
+                    "type": "ResponsiveTable"
                   }
                 }
               },
