--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -160,6 +160,86 @@
         "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
         "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/UMC_UI5/mm-s4apps01/poposting\"}"
       }
+    },
+    {
+      "name": "Start purinfomasterlist",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/mm-s4apps01/purinfomasterlist",
+      "runtimeExecutable": "npx",
+      "windows": {
+        "runtimeExecutable": "npx.cmd"
+      },
+      "runtimeArgs": [
+        "fiori",
+        "run"
+      ],
+      "args": [
+        "--open",
+        "test/flpSandbox.html#mmpurinfomasterlist-display"
+      ],
+      "console": "internalConsole",
+      "internalConsoleOptions": "openOnSessionStart",
+      "outputCapture": "std",
+      "env": {
+        "DEBUG": "--inspect",
+        "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/UMC_UI5/mm-s4apps01/purinfomasterlist\"}"
+      }
+    },
+    {
+      "name": "Start purinfomasterlist Local",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/mm-s4apps01/purinfomasterlist",
+      "runtimeExecutable": "npx",
+      "windows": {
+        "runtimeExecutable": "npx.cmd"
+      },
+      "runtimeArgs": [
+        "fiori",
+        "run"
+      ],
+      "args": [
+        "--config",
+        "./ui5-local.yaml",
+        "--open",
+        "test/flpSandbox.html#mmpurinfomasterlist-display"
+      ],
+      "console": "internalConsole",
+      "internalConsoleOptions": "openOnSessionStart",
+      "outputCapture": "std",
+      "env": {
+        "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/UMC_UI5/mm-s4apps01/purinfomasterlist\"}"
+      }
+    },
+    {
+      "name": "Start purinfomasterlist Mock",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/mm-s4apps01/purinfomasterlist",
+      "runtimeExecutable": "npx",
+      "windows": {
+        "runtimeExecutable": "npx.cmd"
+      },
+      "runtimeArgs": [
+        "fiori",
+        "run"
+      ],
+      "args": [
+        "--config",
+        "./ui5-mock.yaml",
+        "--open",
+        "test/flpSandbox.html#mmpurinfomasterlist-display"
+      ],
+      "console": "internalConsole",
+      "internalConsoleOptions": "openOnSessionStart",
+      "outputCapture": "std",
+      "env": {
+        "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/UMC_UI5/mm-s4apps01/purinfomasterlist\"}"
+      }
     }
   ]
 }
