--- a/mm-s4apps01/physicalinventoryupload/webapp/manifest.json
+++ b/mm-s4apps01/physicalinventoryupload/webapp/manifest.json
@@ -24,8 +24,20 @@
           "localUri": "localService/metadata.xml",
           "odataVersion": "4.0"
         }
+      },
+
+      "zui_dtimp_conf_o4": {
+        "uri": "/sap/opu/odata4/sap/zui_dtimp_conf_o4/srvd/sap/zui_dtimp_conf_o4/0001/",
+        "type": "OData",
+        "settings": {
+            "annotations": [],
+            "localUri": "localService/zui_dtimp_conf_o4/metadata.xml",
+            "odataVersion": "4.0"
+        }
       }
+
     },
+    
     "crossNavigation": {
       "inbounds": {
         "physicalinventoryupload-action": {
@@ -84,6 +96,16 @@
           "autoExpandSelect": true,
           "earlyRequests": true
         }
+      },
+      "Attach": {
+          "dataSource": "zui_dtimp_conf_o4",
+          "preload": true,
+          "settings": {
+              "synchronizationMode": "None",
+              "operationMode": "Server",
+              "autoExpandSelect": true,
+              "earlyRequests": true
+          }
       }
     },
     "resources": {
